manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blitz-svc
spec:
  selector:
    app: blitz
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
